Swagger API documentation - Addition: Booking
